--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
   <head>
     <title> hiooo </title>
-    <head>
+  </head>
       <body>
         <h1> huya </h1>
         <h2> deeee </h2>
-        <body>
-<html>
+  </body>
+</html>
